--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p class="alamat">Jakarta</p>
           </div>
           <div class="workplace">
-            <div style="display: flex; align-items: center; gap: 1rem;">
+            <div style="display: flex; align-items: center; gap: 1rem">
               <img class="workplace-logo" src="./img/yadikasoreang.png" />
               <span>SMK Yadika</span>
             </div>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <section class="card about">
-        <h1 style="font-size: 24px;">About</h1>
+        <h1 style="font-size: 24px">About</h1>
         <p>
           I am Software Developer with several years of experience in developing
           web applications using React, Next.js, HTML, CSS/SASS, Node.js/Express
@@ -36,6 +36,42 @@
           that are functional and easily maintainable by using good design and
           coding principles, clean, modular, efficient, well-tested code
         </p>
+      </section>
+
+      <section class="card">
+        <h1 style="font-size: 24px">Experience</h1>
+        <div>
+          <img
+            src="./img/yadikasoreang.png"
+            width="70"
+            height="70"
+            alt="yadikasoreang"
+          />
+        </div>
+        <div>
+          <p>Sekretaris</p>
+          <p>SMK Yadika Soreang - Fulltime</p>
+          <p>2017 - 2020</p>
+          <p>Bandung</p>
+        </div>
+      </section>
+
+      <section class="card">
+        <h1 style="font-size: 24px">Education</h1>
+        <div>
+          <img
+            src="./img/yadikasoreang.png"
+            width="70"
+            height="70"
+            alt="yadikasoreang"
+          />
+        </div>
+        <div>
+          <p>Sekretaris</p>
+          <p>SMK Yadika Soreang - Fulltime</p>
+          <p>2017 - 2020</p>
+          <p>Bandung</p>
+        </div>
       </section>
     </section>
   </body>
