mengubah posisi foto & warna border

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <section class="banner"></section>
+    <section class="banner">
     <section style="max-width: 700px; margin: auto">
       <div class="main">
         <img src="./img/cat2.jpg" class="avatar" />
@@ -73,6 +73,8 @@
           <p>Bandung</p>
         </div>
       </section>
+      </section>
     </section>
+    
   </body>
 </html>
